--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "setimmediate": "^1.0.5",
     "sweetalert2": "^11.4.4",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
@@ -43,5 +44,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+    "cloudinary": "^1.28.1",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
+    "jest": "^27.5.1",
+    "redux-mock-store": "^1.5.4"
   }
 }
